[refactor] Delete Field and ValueRow in collect_rep.proto